force-app/main/default/objects/Opportunity/fields/Have_adequate_Income_Protection__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_Income_Protection__c</fullName>
    <label>Have adequate Income Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>