force-app/main/default/objects/Opportunity/fields/Have_adequate_insurance__c.field-meta.xml
<CustomField>
    <fullName>Have_adequate_insurance__c</fullName>
    <label>Have adequate insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>