force-app/main/default/objects/Opportunity/fields/HECS__c.field-meta.xml
<CustomField>
    <fullName>HECS__c</fullName>
    <label>HECS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>