force-app/main/default/objects/Opportunity/fields/HEM_Link__c.field-meta.xml
<CustomField>
    <fullName>HEM_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/spreadsheets/d/1X8d8yUwPVDqdMOsTL8eNHv8XV2HNHiY0thDBcWtBRFI/edit#gid=0&quot;, &quot;Living Expenses Table&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HEM Link</label>
    <type>Text</type>
</CustomField>