force-app/main/default/objects/Opportunity/fields/HEM_Living_Expenses__c.field-meta.xml
<CustomField>
    <fullName>HEM_Living_Expenses__c</fullName>
    <description>https://docs.google.com/spreadsheets/d/1X8d8yUwPVDqdMOsTL8eNHv8XV2HNHiY0thDBcWtBRFI/edit#gid=0</description>
    <label>HEM Living Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>