force-app/main/default/objects/Opportunity/fields/HLHC_Created_By__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HLHC Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesHlhcCreated</relationshipName>
    <type>Lookup</type>
</CustomField>