force-app/main/default/objects/Opportunity/fields/HLHC_Offered__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HLHC Offered</label>
    <type>Checkbox</type>
</CustomField>