force-app/main/default/objects/Opportunity/fields/Home_Loan_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Repayments__c</fullName>
    <label>Home Loan Repayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>