force-app/main/default/objects/Opportunity/fields/Home_Owner__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner__c</fullName>
    <label>Home Owner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>