force-app/main/default/objects/Opportunity/fields/Household_Purchases_and_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Household_Purchases_and_Maintenance__c</fullName>
    <formula>Applicant_1__r.PersonContact.Household_Purchases_and_Maintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>