force-app/main/default/objects/Opportunity/fields/Household_Values__c.field-meta.xml
<CustomField>
    <fullName>Household_Values__c</fullName>
    <label>Household</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Couple</fullName>
            </value>
            <value>
                <fullName>Couple with 1 child</fullName>
            </value>
            <value>
                <fullName>Couple with 2 children</fullName>
            </value>
            <value>
                <fullName>Couple with 3 or more children</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Single Parent with 1 child</fullName>
            </value>
            <value>
                <fullName>Single Parent with 2 children</fullName>
            </value>
            <value>
                <fullName>Single Parent with 3 or more children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>