force-app/main/default/objects/Opportunity/fields/How_detailed_would_you_like_your_quotes__c.field-meta.xml
<CustomField>
    <fullName>How_detailed_would_you_like_your_quotes__c</fullName>
    <label>How detailed would you like your quotes?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>