force-app/main/default/objects/Opportunity/fields/How_much_do_you_need__c.field-meta.xml
<CustomField>
    <fullName>How_much_do_you_need__c</fullName>
    <label>How much do you need</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>