force-app/main/default/objects/Opportunity/fields/I_certify_the_applicants_ID_and_intent__c.field-meta.xml
<CustomField>
    <fullName>I_certify_the_applicants_ID_and_intent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I am satisfied that the applicants are who they say they are and have confirmed that all applicants are aware of and consent to making the application to the lender.</inlineHelpText>
    <label>I certify the applicants ID and intent</label>
    <type>Checkbox</type>
</CustomField>