force-app/main/default/objects/Opportunity/fields/I_certify_the_information_is_correct__c.field-meta.xml
<CustomField>
    <fullName>I_certify_the_information_is_correct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I certify that the information I provided to the lender in my notes and submission is true and correct. I have in no way altered the figures or attempted to mislead the lender, and I have not guided the customer to do anything which could be seen to be advising them to alter their information or mislead the lender.</inlineHelpText>
    <label>I certify the information is correct</label>
    <type>Checkbox</type>
</CustomField>