force-app/main/default/objects/Opportunity/fields/Important_Information__c.field-meta.xml
<CustomField>
    <fullName>Important_Information__c</fullName>
    <label>Important Information</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>