force-app/main/default/objects/Opportunity/fields/importantNotes__c.field-meta.xml
<CustomField>
    <fullName>importantNotes__c</fullName>
    <label>importantNotes</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>