force-app/main/default/objects/Opportunity/fields/Income_Description__c.field-meta.xml
<CustomField>
    <fullName>Income_Description__c</fullName>
    <label>Income Description</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>