force-app/main/default/objects/Opportunity/fields/Income_Employment__c.field-meta.xml
<CustomField>
    <fullName>Income_Employment__c</fullName>
    <label>Income &amp; Employment</label>
    <type>TextArea</type>
</CustomField>