force-app/main/default/objects/Opportunity/fields/installationAddressLineOne__c.field-meta.xml
<CustomField>
    <fullName>installationAddressLineOne__c</fullName>
    <label>installationAddressLineOne</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>