force-app/main/default/objects/Opportunity/fields/installationCountry__c.field-meta.xml
<CustomField>
    <fullName>installationCountry__c</fullName>
    <label>installationCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>