force-app/main/default/objects/Opportunity/fields/installationPostcode__c.field-meta.xml
<CustomField>
    <fullName>installationPostcode__c</fullName>
    <label>installationPostcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>