force-app/main/default/objects/Opportunity/fields/installationSuburb__c.field-meta.xml
<CustomField>
    <fullName>installationSuburb__c</fullName>
    <label>installationSuburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>