force-app/main/default/objects/Opportunity/fields/Insurances_Home_Personal_Voluntary__c.field-meta.xml
<CustomField>
    <fullName>Insurances_Home_Personal_Voluntary__c</fullName>
    <formula>Applicant_1__r.PersonContact.Insurances_Home_Personal_Voluntary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>