force-app/main/default/objects/Opportunity/fields/Interest_in_advance__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_advance__c</fullName>
    <label>Interest in advance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesMayBeNo</valueSetName>
    </valueSet>
</CustomField>