force-app/main/default/objects/Opportunity/fields/Interest_only_repayments__c.field-meta.xml
<CustomField>
    <fullName>Interest_only_repayments__c</fullName>
    <label>Interest only repayments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesMayBeNo</valueSetName>
    </valueSet>
</CustomField>