force-app/main/default/objects/Opportunity/fields/Interested_in_Access_to_a_branch_network__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Access_to_a_branch_network__c</fullName>
    <label>Interested in Access to a branch network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesMayBeNo</valueSetName>
    </valueSet>
</CustomField>