force-app/main/default/objects/Opportunity/fields/Interested_in_Part_fixed_and_variable__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Part_fixed_and_variable__c</fullName>
    <label>Interested in Part fixed and variable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesMayBeNo</valueSetName>
    </valueSet>
</CustomField>