force-app/main/default/objects/Opportunity/fields/Interested_in_Redraw__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Redraw__c</fullName>
    <label>Interested in Redraw</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesMayBeNo</valueSetName>
    </valueSet>
</CustomField>