force-app/main/default/objects/Opportunity/fields/Interested_in_Variable_rate__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Variable_rate__c</fullName>
    <label>Interested in Variable rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesMayBeNo</valueSetName>
    </valueSet>
</CustomField>