force-app/main/default/objects/Opportunity/fields/isActivityCheck__c.field-meta.xml
<CustomField>
    <fullName>isActivityCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActivityCheck</label>
    <type>Checkbox</type>
</CustomField>