force-app/main/default/objects/Opportunity/fields/Joint_Application__c.field-meta.xml
<CustomField>
    <fullName>Joint_Application__c</fullName>
    <formula>IF(Number_of_applicants__c == 2,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Joint Application</label>
    <type>Checkbox</type>
</CustomField>