force-app/main/default/objects/Opportunity/fields/Last_Customer_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Action__c</fullName>
    <label>Last Customer Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application received</fullName>
            </value>
            <value>
                <fullName>Documents received</fullName>
            </value>
            <value>
                <fullName>Identity verified</fullName>
            </value>
            <value>
                <fullName>Credit proposal signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>