force-app/main/default/objects/Opportunity/fields/Last_Customer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Activity__c</fullName>
    <label>Last Customer Activity</label>
    <type>DateTime</type>
</CustomField>