force-app/main/default/objects/Opportunity/fields/Last_Report_Ready_Access_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Report_Ready_Access_Id__c</fullName>
    <label>Last Report Ready Access Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>