force-app/main/default/objects/Opportunity/fields/Lead_Conversion_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Record_Type_Id__c</fullName>
    <label>Lead Conversion Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>