force-app/main/default/objects/Opportunity/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SolarQuotes</fullName>
            </value>
            <value>
                <fullName>Solar Installer / Retailer</fullName>
            </value>
            <value>
                <fullName>Home Improvement Installer / Retailer</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Real Estate Agent</fullName>
            </value>
            <value>
                <fullName>First Home Centre</fullName>
            </value>
            <value>
                <fullName>Other Business Referral</fullName>
            </value>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Direct Enquiry</fullName>
            </value>
            <value>
                <fullName>Outgrow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>