force-app/main/default/objects/Opportunity/fields/leadAddress__c.field-meta.xml
<CustomField>
    <fullName>leadAddress__c</fullName>
    <description>For solar quotes</description>
    <label>leadAddress</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>