force-app/main/default/objects/Opportunity/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <description>For solar quotes</description>
    <externalId>true</externalId>
    <label>LeadId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>