force-app/main/default/objects/Opportunity/fields/Legal_Fees__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fees__c</fullName>
    <label>Legal Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>