force-app/main/default/objects/Opportunity/fields/Lender_Agent__c.field-meta.xml
<CustomField>
    <fullName>Lender_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Lender Agent)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>