force-app/main/default/objects/Opportunity/fields/Lender_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Lender_Application_ID__c</fullName>
    <label>Lender Application ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>