force-app/main/default/objects/Opportunity/fields/Lender_assessed_living_expenses__c.field-meta.xml
<CustomField>
    <fullName>Lender_assessed_living_expenses__c</fullName>
    <label>Lender assessed living expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>