force-app/main/default/objects/Opportunity/fields/Lender_assessed_net_income__c.field-meta.xml
<CustomField>
    <fullName>Lender_assessed_net_income__c</fullName>
    <label>Lender assessed net income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>