force-app/main/default/objects/Opportunity/fields/Lender_assessed_other_commitments__c.field-meta.xml
<CustomField>
    <fullName>Lender_assessed_other_commitments__c</fullName>
    <label>Lender assessed other commitments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>