force-app/main/default/objects/Opportunity/fields/Lender_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Lender_Calculator__c</fullName>
    <label>Lender Calculator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFCU</fullName>
            </value>
            <value>
                <fullName>TMCU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>