force-app/main/default/objects/Opportunity/fields/Lender_Documents_after_Variation__c.field-meta.xml
<CustomField>
    <fullName>Lender_Documents_after_Variation__c</fullName>
    <description>When a Variation Funding request is submitted then we are Updating old Lender Creadit Documents as false.
So We are adding those documents Id&apos;s in this field.
because when the Variation request will be cancelled then we have to update older documents as True again.</description>
    <label>Lender Documents after Variation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>