force-app/main/default/objects/Opportunity/fields/Lender_ID__c.field-meta.xml
<CustomField>
    <fullName>Lender_ID__c</fullName>
    <label>Lender ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>