force-app/main/default/objects/Opportunity/fields/Line_Chart_JSON__c.field-meta.xml
<CustomField>
    <fullName>Line_Chart_JSON__c</fullName>
    <label>Line Chart JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>