force-app/main/default/objects/Opportunity/fields/LineChart_Flag__c.field-meta.xml
<CustomField>
    <fullName>LineChart_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LineChart Flag</label>
    <type>Checkbox</type>
</CustomField>