force-app/main/default/objects/Opportunity/fields/Link_to_DISC_Guide__c.field-meta.xml
<CustomField>
    <fullName>Link_to_DISC_Guide__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/document/d/1_oX1IozMhkZnqgTRbyE0OCZ6Gc1_3Hy3G9RFJclwX0A/edit?folder=0AHQyppRwf-a8Uk9PVA&quot;, &quot;DISC Guide&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to DISC Guide</label>
    <type>Text</type>
</CustomField>