force-app/main/default/objects/Opportunity/fields/Living_Expense_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Living_Expense_Group_Type__c</fullName>
    <label>Living Expense Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full mortgage</fullName>
            </value>
            <value>
                <fullName>Full personal</fullName>
            </value>
            <value>
                <fullName>Limited personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>