force-app/main/default/objects/Opportunity/fields/Loan_amount_you_want_to_apply_for__c.field-meta.xml
<CustomField>
    <fullName>Loan_amount_you_want_to_apply_for__c</fullName>
    <label>Loan amount you want to apply for?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>