force-app/main/default/objects/Opportunity/fields/Loan_Details_change__c.field-meta.xml
<CustomField>
    <fullName>Loan_Details_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Details change</label>
    <type>Checkbox</type>
</CustomField>