force-app/main/default/objects/Opportunity/fields/Loan_Motive__c.field-meta.xml
<CustomField>
    <fullName>Loan_Motive__c</fullName>
    <label>Loan Motive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Save money</fullName>
            </value>
            <value>
                <fullName>Reduce cost of living</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Improve Property Value</fullName>
            </value>
            <value>
                <fullName>Improve lifestyle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>