force-app/main/default/objects/Opportunity/fields/Loan_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_months__c</fullName>
    <label>Loan Term months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>