force-app/main/default/objects/Opportunity/fields/locking_rate_at_the_time_of_application__c.field-meta.xml
<CustomField>
    <fullName>locking_rate_at_the_time_of_application__c</fullName>
    <label>locking rate at the time of application?</label>
    <length>5</length>
    <type>Text</type>
</CustomField>