force-app/main/default/objects/Opportunity/fields/LRRA_Change__c.field-meta.xml
<CustomField>
    <fullName>LRRA_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LRRA Change</label>
    <type>Checkbox</type>
</CustomField>