force-app/main/default/objects/Opportunity/fields/LVR__c.field-meta.xml
<CustomField>
    <fullName>LVR__c</fullName>
    <formula>Total_Loan_amount__c / Security_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>